--- a/config/config.json
+++ b/config/config.json
@@ -5,5 +5,12 @@
     "database": "pair-project-phase-1",
     "host": "127.0.0.1",
     "dialect": "postgres"
+  },
+  "production": {
+    "username": "postgres",
+    "password": "postgres",
+    "database": "pair-project-phase-1",
+    "host": "127.0.0.1",
+    "dialect": "postgres"
   }
 }
